CHANGES-1.3.txt
---------------

CHANGES IN CUPS V1.3.11

	- "lpstat -h server" showed non-shared printers (STR #3147)
	- "make check" did not work on Linux (STR #3161)


CHANGES IN CUPS V1.3.10

	- Documentation fixes (STR #2994, STR #2995, STR #3008, STR #3056,
	  STR #3057)
	- SECURITY: The scheduler now protects against DNS rebinding attacks
	  (STR #3118)
	- SECURITY: Fixed TIFF integer overflow in image filters (STR #3031)
	- The scheduler did not support the job-hold-until attribute with the
	  Restart-Job operation (STR #3130)
	- SECURITY: The PNG image reading code did not validate the
	  image size properly, leading to a potential buffer overflow
	  (STR #2974)
	- The rastertohp driver did not set the 1-sided printing mode when
	  needed (STR #3131)
	- Now use a wrapper program instead of our fork of the Xpdf code to
	  support printing of PDF files. The new wrapper supports using Xpdf,
	  poppler, or Ghostscript to convert PDF files to PostScript (STR #3129)
	- Long job names caused problems with some PJL printers (STR #3125)
	- The lpq command did not work when showing all destinations (STR #3117)
	- The scheduler used a codeset name of UTF8 which is not supported on
	  Solaris (STR #3113)
	- cupsGetJobs() did not work with a NULL destination (STR #3107)
	- Fixed a localization problem for option choices (incorrectly) named
	  "Custom" (STR #3106)
	- The fallback OpenSSL random number seeding would not work (STR #3079)
	- The scheduler might miss a child signal, causing high CPU usage.
	- The scheduler did not enforce quotas after the job history was
	  unloaded (STR #3078)
	- The job-k-limit, job-page-limit, and job-quota-period attributes
	  could not be set using the lpadmin command (STR #3077)
	- httpSeparateURI() did not error out on URIs with a missing port
	  number after a colon.
	- Fixed a Valgrind-detected initialization error when creating a
	  missing directory on startup.
	- The scheduler did not always read all of the HTTP headers from a